# hermite

./: CMakeLists.txt  CONTRIBUTING.md  README.md  a00011.html  a00011_source.html  a00012.map  a00012.md5  a00013.map  a00013.md5  a00014.html  a00014_source.html  a00015.map  a00015.md5  a00016.map  a00016.md5  a00017.html  a00017_source.html  a00018.map  a00018.md5  a00019.map  a00019.md5  a00020.html  a00020_source.html  a00021.map  a00021.md5  a00022.map  a00022.md5  a00023.html  a00023_source.html  a00024.map  a00024.md5  a00026.html  a00026_source.html  a00028.map  a00028.md5  a00029.html  a00029_source.html  a00030.map  a00030.md5  a00031.map  (+110 more)
.github/workflows/: cmake.yml  doc.yml
app/: CMakeLists.txt  hermite_app.cpp
doc/: CMakeLists.txt  index.md
example/: CMakeLists.txt  example1.cpp  example2.cpp
include/hermite/: base.hpp  base_spline.hpp  constants.hpp  cubic.hpp  hermite.hpp  hermite_sub.hpp  hermite_unit.hpp  pose.hpp  unit.hpp
include/hermite/cubic/: cubic_impl.hpp  cubic_vec.hpp
include/hermite/hermite/: hermite_sub.hpp  hermite_unit.hpp
include/hermite/spline/: spline_impl.hpp  spline_vec.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+22 more)
test/: CMakeLists.txt  testconstant.cpp  testcubic.cpp  testcubiclowlevel.cpp  testhermite.cpp  testpose.cpp  testspline.cpp  testsub.cpp  testunit.cpp
